<resources>
    <string name="app_name">Apneia Monitor</string>
    <string name="title_inicio">Início</string>
    <string name="title_alarme">Alarme</string>
    <string name="title_calibracao">Cablibração</string>
    <string name="title_historico">Histórico</string>
    <string name="label_selecionar_conexao">Selcionar conexão: </string>
    <string name="button_conectar">Conectar</string>
    <string name="buscar_conexoes">Buscar conexões</string>
    <string name="dispositivo_conectado">Dispostivo conectado: </string>
    <string name="status_dispositivo_conectado">Nenhum dispositivo conectado</string>
    <string name="button_iniciar_calibracao">Iniciar calibração</string>
    <string name="label_maximo_medido">Máximo medido</string>
    <string name="label_inspiracao">Inspiração</string>
    <string name="label_expiracao">Expiração</string>
    <string name="label_valor_medido">Valor medido: </string>
    <string name="valor_inspiracao">20 Unidades</string>
    <string name="button_confirmar">Confirmar calibração</string>
    <string name="button_cancelar">Cancelar</string>
    <string name="text_instrucao_expiracao">Realize a respiração por 5 vezes de forma normal.</string>
    <string name="text_inpiracao_instrucao">Realize a respiração por 5 vezes de forma normal.</string>
    <string name="lbl_tempo_limite">Tempo limite para alarme</string>
    <string name="lbl_limite_expansao">Limite de expansão</string>
    <string name="lbl_btn_iniciar">Iniciar</string>
    <string name="lbl_visualizar_grafico">Visualizar gráfico</string>
    <string name="txt_hora_inicial">Hora inicial</string>
    <string name="txt_hora_final">Hora final</string>
    <string name="btn_gerar_relatorio">Gerar relatório</string>
    <string name="btn_gerar_grafico">Gerar gráfico</string>
    <string name="text_grafico">Gráfico</string>
    <string name="lbl_valor_lido">Valor lido:</string>
    <string name="txt_valor_lido">0</string>
    <string name="btn_lbl_parar">Parar</string>
    <string name="lblTrigger">Disparos</string>
    <string name="valueTriggerAmount">0</string>
    <string name="lblAverage">Média</string>
    <string name="valueAverage">0</string>
    <string name="lblMax">Máximo</string>
    <string name="lblMínimo">Mínimo</string>
    <string name="lblDisparos">Disparos</string>
    <string name="lblTempoColeta">Tempo de coleta</string>

    <string-array name="dispositivos_disponiveis">
        <item>Dispositivo 1</item>
        <item>Dispositivo 2</item>
        <item>Dispositivo 3</item>
    </string-array>

    <string-array name="tempos_alarme">
        <item>5</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
    </string-array>

    <string-array name="limites_expansao">
        <item>100</item>
        <item>75</item>
        <item>50</item>
        <item>30</item>
        <item>20</item>
        <item>0</item>
    </string-array>
</resources>
