<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Historico">

    <Spinner
        android:id="@+id/spinnerHistory"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblTriggerAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/lblTempoColeta"
        app:layout_constraintBottom_toBottomOf="@+id/tempoColeta"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tempoColeta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/valueTriggerAmount"
        app:layout_constraintEnd_toStartOf="@+id/lblAverage"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintStart_toEndOf="@+id/lblTriggerAmount"
        app:layout_constraintTop_toBottomOf="@+id/spinnerHistory" />

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graphHistory"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/valueMax" />

    <TextView
        android:id="@+id/lblAverage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/lblAverage"
        app:layout_constraintEnd_toStartOf="@+id/valueAverage"
        app:layout_constraintTop_toBottomOf="@+id/spinnerHistory" />

    <TextView
        android:id="@+id/valueAverage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="96dp"
        android:layout_marginRight="96dp"
        android:text="@string/valueAverage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerHistory" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/lblMax"
        app:layout_constraintBottom_toBottomOf="@+id/valueMax"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/valueMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/valueAverage"
        app:layout_constraintEnd_toStartOf="@+id/textView20"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView18"
        app:layout_constraintTop_toBottomOf="@+id/tempoColeta" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/lblMínimo"
        app:layout_constraintEnd_toStartOf="@+id/valueMin"
        app:layout_constraintTop_toBottomOf="@+id/lblAverage" />

    <TextView
        android:id="@+id/valueMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="76dp"
        android:layout_marginRight="76dp"
        android:text="@string/valueAverage"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/lblAverage" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/lblDisparos"
        app:layout_constraintEnd_toStartOf="@+id/valueDisparos"
        app:layout_constraintTop_toBottomOf="@+id/lblAverage" />

    <TextView
        android:id="@+id/valueDisparos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:text="@string/valueAverage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblAverage" />

</androidx.constraintlayout.widget.ConstraintLayout>